--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API = 
-TG_API = 
+API = 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
+TG_API = 6036802217:AAHmeyIr6ikEkud5Uxx-QxBkuyrBOB9uNKU
